GYM-44 added likesCount to ResponseRoutineDto